# psylink

./: .gitignore  BUILDING.md  Cargo.toml  README.md  build.rs
archive/: README.md
archive/6_gnuradio/prototype9/: plot_signals.grc
arduino/AnalogToBLE1.0/: AnalogToBLE1.0.ino
arduino/AnalogToBLE1.1/: AnalogToBLE1.1.ino
arduino/AnalogToBLE1.2/: AnalogToBLE1.2.ino
arduino/AnalogToBLE1.3/: AnalogToBLE1.3.ino
python/: requirements.txt
python/psylink/: bluetooth.py  protocol.py
rust/: Cargo.toml  psylink.slint
rust/src/: bluetooth.rs  firmware.rs  gui.rs  main.rs
schematics/electrode_module3.3/: README.md  assembly_BOM.csv  assembly_positions.csv
schematics/electrode_module4/: README.md
schematics/power_module4.2/: README.md  assembly_BOM.csv  assembly_positions.csv
src/: bluetooth.rs  calibration.rs  fakeinput.rs  firmware.rs  gui.rs  lib.rs  main.rs  protocol.rs  psylink.slint  sound.rs
src/data/: psylink.desktop  test_dataset.rs  test_model_config.json
