[package]
name = "psylink"
license = "GPL-3.0-only"
rust-version = "1.76.0"
repository = "https://codeberg.org/psylink/psylink"
homepage = "https://psylink.me"
edition = "2021"
version = "0.1.0"

[dependencies]
btleplug = "0.11.5"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["sync", "rt", "macros", "rt-multi-thread"] }
slint = { version = "1.5", optional = true, default-features = false, features = ["accessibility", "backend-qt", "backend-winit", "compat-1-2", "renderer-software", "std"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["sync", "rt", "macros", "rt-multi-thread"] }

[build-dependencies]
slint-build = "1.5"

[features]
default = ["gui"]
gui = ["dep:slint"]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false
debug = false
strip = true
